# RobotHandGrammar

./: .gitignore  CMakeLists.txt  README.md
data/camera_config/: 0.txt  1.txt  2.txt  3.txt
data/grammar/: palm_non_terminal.STL
data/grammar/finger_fork/: components.xml  components_finger.xml  grammar.txt
data/grammar/finger_fork/cage/: fingertip_cages_mean_value.txt  joint_cages_mean_value.txt  knuckle_cages_mean_value.txt  phalanx_body_cages_mean_value.txt
data/grammar/finger_fork/mesh/: C.stl  F.stl  fingertip.stl  joint_child.stl  joint_parent.stl  joint_pulley.stl  knuckle.stl
data/grammar/finger_grammar/: components.xml  grammar.txt
data/grammar/finger_grammar/cage/: adapter_cages_mean_value.txt  fingertip_cages_mean_value.txt  fork_cages_mean_value.txt  joint_cages_mean_value.txt  palm_cages_mean_value.txt  phalanx_body_cages_mean_value.txt  solid_cages_mean_value.txt
data/grammar/finger_grammar/mesh/: S.stl  adapter.stl  fingertip_child.stl  fingertip_parent.stl  fork.stl  joint_child.stl  joint_parent.stl  joint_pulley.stl  knuckle_child.stl  knuckle_parent.stl  phalanx_body.stl  phalanx_dorsal_cover.stl  phalanx_palmar_cover.stl  solid.stl
data/grammar/finger_grammar/tactile_quad_mesh/: adapter.txt  joint.txt  phalanx.txt  solid.txt  tip.txt
data/grammar/palm_grammar/: mount_cage.txt  palm_cage.txt  palm_grammar.txt  palm_grammar_planar_rules.txt
data/grammar/palm_grammar/meshes/: K2.STL  M.STL  N1.STL  N1_child.STL  N1_parent.STL  N2.STL  N2_parent.STL  W.STL
src/: CMakeLists.txt  bounded_biharmonic_weights.hpp  cotangent_laplacian.hpp  dihedral_sine.hpp  handles.hpp  linear_blend_skinning_object.cpp  linear_blend_skinning_object.h  linear_blend_skinning_ui.cpp  linear_blend_skinning_ui.h  linear_weights.hpp  main.cpp  mean_value_weights.cpp  mean_value_weights.h  mesh_util.hpp  nearest_neighbor_weights.hpp  quadratic_optimizer.hpp
src/Common/: Common.h  hexahedral_mesh.hpp  poly_mesh.hpp  tetrahedral_mesh.hpp  typedefs.hpp
src/Grammar/: finger_grammar.cpp  finger_grammar.h  palm_grammar.cpp  palm_grammar.h
src/Graph/: node.cpp  node.h  tree.cpp  tree.h
src/Mesh/: mesh.cpp  mesh.h
